--- a/Basic Algorithms/BasicAlgorithms/Binary search practice.ipynb
+++ b/Basic Algorithms/BasicAlgorithms/Binary search practice.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "def binary_search(array, target):\n",
+    "def binary_search(array, target, start_index = 0start_index = 0, end_index = len(array) - 1end_index = len(array) - 1):\n",
     "    '''Write a function that implements the binary search algorithm using iteration\n",
     "   \n",
     "    args:\n",
@@ -49,8 +49,6 @@
     "      -1: if the target is not found\n",
     "      \n",
     "    '''\n",
-    "    start_index = 0\n",
-    "    end_index = len(array) - 1\n",
     "    \n",
     "    while start_index <= end_index:\n",
     "        mid_index = (start_index +end_index)//2\n",
